--- a/app/views/api_configurations/_form.html.erb
+++ b/app/views/api_configurations/_form.html.erb
@@ -27,6 +27,11 @@
 		<%= f.text_field :client_secret, class: "form-control" %>
 	</div>
 
+	<div class="field form-group">
+		<%= f.label :hosting_service %><br>
+		<%= f.text_field :hosting_service, class: "form-control" %>
+	</div>
+
 	<div class="actions">
 		<%= f.submit "Submit", class: "btn btn-primary" %>
 	</div>
